2001-09-05  Gerd Moellmann  <gerd@gnu.org>

	* configure.in: Avoid `$@' which is handled specially in
	Autoconf 2.52.  From "Adam J. Richter" <adam@yggdrasil.com>.
	
2001-09-01  Eli Zaretskii  <eliz@is.elta.co.il>

	* make-dist (nt): Add subdirs.el to the list of distributed files.

2001-08-14  Eli Zaretskii  <eliz@is.elta.co.il>

	* configure.in (machine): Add an entry for
	hppa1.1-hitachi-hiuxwe2*.

2001-05-28  Gerd Moellmann  <gerd@gnu.org>

	* make-dist (LANG): Set LC_ALL and LANGUAGE to C, unset
	LC_MESSAGES and LANG.  From Karl Eichwalder <keichwa@gmx.net>.

2001-05-14  Gerd Moellmann  <gerd@gnu.org>

	* make-dist: Copy texinfo.tex unconditionally.

2001-04-25  Eli Zaretskii  <eliz@is.elta.co.il>

	* Makefile.in (install-arch-indep): Add gfdl.1 to the man pages
	that are installed.

2001-04-06  Gerd Moellmann  <gerd@gnu.org>

	* make-dist: Copy only `[a-z]*.{el,elc}' from leim/quail.
	Don't copy quick-b5, quick-cns, tsang-b5, and tsang-cns files.
	
	* make-dist: Handle leim/MISC-DIC.  Only include
	`[a-zA-Z]*.{el,elc}' from leim/quail.

2001-04-05  Gerd Moellmann  <gerd@gnu.org>

	* Makefile.in (install-arch-indep): Remove .cvsignore files.

2001-03-30  Gerd Moellmann  <gerd@gnu.org>

	* Makefile.in (.PHONY): Add for bootstrap targets.
	(bootstrap-clean): New target.
	(bootstrap): Use it instead of `clean'.

2001-03-29  Eli Zaretskii  <a34785@is.elta.co.il>

	* Makefile.in (SUBDIR): Remove leim.
	(all, .RECURSIVE, extraclean): Add leim explicitly.
	(leim): Provide separate rule which exports PARALLEL=0 into the
	environment.

2001-03-20  Gerd Moellmann  <gerd@gnu.org>

	* configure.in (HAVE_XPM): Don't print the result of the check for
	XpmReturnAllocPixels if we don't have an xpm.h.

2001-03-05  Gerd Moellmann  <gerd@gnu.org>

	* COPYING: New file.

2001-03-04  Eli Zaretskii  <eliz@is.elta.co.il>

	* config.bat: Update the copyright.

2001-02-23  Kenichi Handa  <handa@etl.go.jp>

	* configure.in: Use AC_EGREP_CPP to check if the C preprocessor