@@ -1,3 +1,10 @@
+2001-10-18  Ken Raeburn  <raeburn@gnu.org>
+
+	* Makefile.in (HESIODLIB) [HAVE_LIBHESIOD]: Set to include
+	-lhesiod and maybe -lresolv.
+	(CRYPTOLIB) [HAVE_LIBK5CRYPTO]: Use -lk5crypto for Kerberos
+	support if it's available.
+
 2001-10-18  Andrew Innes  <andrewi@gnu.org>
 
 	* makefile.nt (ALL): Do not include fakemail.
