@@ -1,3 +1,10 @@
+2001-10-18  Ken Raeburn  <raeburn@mit.edu>
+
+	* configure.in: If --with-hesiod is given, look for
+	hes_getmailhost and res_send or __res_send; check hesiod and
+	resolv libraries respectively if system libraries don't supply
+	them.
+
 2001-09-05  Gerd Moellmann  <gerd@gnu.org>
 
 	* configure.in: Avoid `$@' which is handled specially in
